# RustInteropExample

./: .gitignore  readme.md
RustInteropExample/: AppDelegate.swift  ContentView.swift  Example-Bridging-Header.h  Info.plist  RustInterface.swift  example.pb.swift
RustInteropExample.xcodeproj/: project.pbxproj
RustInteropExample.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
RustInteropExample.xcodeproj/xcshareddata/xcschemes/: RustInteropExample.xcscheme
RustInteropExample/Base.lproj/: Main.storyboard
example/: Cargo.toml
example/example.xcodeproj/: project.pbxproj
example/src/: example.h  example.proto  lib.rs
