[package]
name = "example"
version = "0.1.0"
authors = ["Roland Crosby <roland@rolandcrosby.com>"]
edition = "2018"

[dependencies]
libc = "0.2"
lazy_static = "1.4"
prost = "0.6"
bytes = "0.5"
rand = "0.7"

[build-dependencies]
prost-build = { version = "0.6" }

[lib]
crate-type = ["lib", "cdylib", "staticlib"]